--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@
 }
 
 body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     height: 100vh;
     width: 100vw;
 }
@@ -23,7 +26,6 @@ body {
 }
 
 .search {
-    margin-top: 200px;
     width: 100%;
     text-align: center;
 }
